crystal-facet-uml (1.33.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * t.b.d.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 16 ??? 2021 08:00:00 +0200

crystal-facet-uml (1.33.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The database has new fields uuid and diagram.display_flags
  * fix: when copying objects via clipboard, the last characters are
    not dropped if escape-sequences cause exceeding maximum string length
  * json export (experimental)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 16 Oct 2021 08:00:00 +0200

crystal-facet-uml (1.32.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * test_expand_space is now more robust against unexpected installed fonts

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 29 Aug 2021 19:00:00 +0200

crystal-facet-uml (1.32.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * overlaps between relationships with identical type, source and destination
    are avoided.
  * good default size of classifiers in case classifiers share same location
  * less overlaps to labels below actor, fork/join, start/end, h, time
  * nicer relationships to comments and requirements in sequences and timing

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 29 Aug 2021 16:00:00 +0200

crystal-facet-uml (1.31.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * component titles do not touch the type icon anymore
  * icon alignment in classifiers is not rounded to int anymore
  * use case circles do not cut into label texts
  * decision/choice rhombus do not cut into label texts
  * send signal arrows do not cut into label texts
  * accept event flags do not cut into label texts

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 31 Jul 2021 16:00:00 +0200

crystal-facet-uml (1.30.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in search mode, objects are highlighted individually
    (not all per diagram)
  * in search result list, long names have nice linebreaks